rename CounterApi to CountersApi
